# tom_swift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-release.yml  pypi-release.yml  run-tests.yml
tom_swift/: apps.py  forms.py  models.py  swift.py  swift_api.py  test_swift.py  urls.py  views.py
tom_swift/migrations/: 0001_initial.py
tom_swift/templates/tom_swift/: observation_form.html
tom_swift/templates/tom_swift/partials/: swift_user_profile.html
tom_swift/templatetags/: swift_extras.py
tom_swift/tests/: test_instrument_mode_validation.py
