[project]
name = "tom-swift"
description = "TOM Toolkit Facility module for the Neil Gehrels Swift Observatory"
authors = [{name = "Lindy Lindstrom", email = "llindstrom@lco.global"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10.0,<3.14"
dependencies = [
    "tomtoolkit>=3.0.0,<4.0.0",
    "swifttools <4",
    "boto3 <2",
]

[tool.poetry]
version = "0.0.0" # version supplied by poetry-dynamic-versioning

[tool.poetry.group.lint.dependencies]
flake8 = ">=6.0,<7.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# the default pattern regex makes the 'v' manditory
# this pattern modifies the default regex in order to make the 'v' optional
# ('v' becomes '[v]?' meaning a single v, [v], and ? means optional)
pattern = "(?x)^[v]?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# substitute version not only in pyproject.toml (which the config block above does)
# but also the __init__.py file
[tool.poetry-dynamic-versioning.substitution]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
# poetry_dynamic_versioning.backend is a thin wrapper around the standard build-backend = "poetry.core.masonry.api"
